--- a/src/components/StundenplanView/Tag/Tag.css
+++ b/src/components/StundenplanView/Tag/Tag.css
@@ -1,5 +1,5 @@
 .main {
-  min-height: 80vh !important;
+  width: 50%;
 }
 
 @media (min-width: 768px){
